--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,20 +1,27 @@
+#home {
+    height: calc(100% - 92px);
+}
+
 .home-wrapper {
     display: flex;
     flex: 1;
-    margin-top: 92px;
-    max-width: 1440px;
+    margin-top: 70px;
+    width: 100%;
     padding: 10%;
-    /* height: 50vh; */
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.home__left-wrapper {
+    display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .home__heading {
     font-size: 2rem;
     font-weight: 400;
     padding-left: 2px;
-    /* background-color: linear-gradient( #000, #fff, 70%);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text; */
 }
 
 .home__name {
@@ -71,6 +78,7 @@
 .btn {
     font-weight: 400 !important;
     font-size: 14px !important;
+    padding: 8px 16px !important;
 }
 
 .btn:hover {
@@ -83,5 +91,32 @@
 }
 
 .contact-btn {
-    background-color: var(--primary-color) !important;
+    background-color: var(--secondary-color) !important;
+}
+
+.home__right-wrapper {
+    margin-left: 80px !important;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.icon-btn {
+    font-size: 3rem;
+}
+
+.icon-facebook {
+    color: #0570E6;
+}
+
+.icon-instagram {
+    color: #EA2A52;
+}
+
+.icon-twitter {
+    color: #1DA1F2;
+}
+
+.icon-linkedin {
+    color: #0A66C2;
 }
