--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,7 +1,3 @@
-/* :root {
-    --text-color: #03353e;
-} */
-
 .logo:hover {
     cursor: pointer;
 }
@@ -9,8 +5,8 @@
 .logo__text {
     height: 40px;
     line-height: 43px;
-    margin: 3px;
-    padding: 0px 22px;
+    margin: 5px 0;
+    padding-left: 24px;
     display: flex;
     font-size: 1.8rem;
     font-weight: 900;
@@ -22,15 +18,6 @@
     color: var(--text-color);
 }
 
-#main {
-    width: 100%;
-    height: 768px;
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: contain;
-    /* background-image: url("../images/banner.png"); */
-}
-
 nav {
     display: flex;
     justify-content: space-around;
@@ -38,7 +25,7 @@ nav {
     position: fixed;
     left: 0;
     top: 0;
-    padding: 20px 0;
+    padding: 8px 0 10px;
     width: 100%;
     z-index: 1;
     background-color: transparent;
