--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -6,6 +6,7 @@
     display: flex;
     flex: 1;
     width: 100%;
+    height: 100vh;
     padding: 10%;
     padding-top: calc(10% + 50px);
     flex-direction: row;
@@ -13,13 +14,15 @@
 }
 
 .about-img {
-    width: 40%;
+    width: 30%;
+    /* height: 500px; */
+    display: flex;
     position: relative;
 }
 
 .img-card {
-    width: 70%;
-    height: 100%;
+    /* width: 70%; */
+    /* height: 100%; */
     border-radius: 20px;
     padding: 20px;
     display: flex;
@@ -31,7 +34,7 @@
 
 .img-card img {
     border-radius: 10px;
-    object-fit: contain;
+    object-fit: cover;
     z-index: 1;
 }
 
@@ -42,14 +45,15 @@
 
 .about-content {
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    margin: 0 10px;
+    margin-left: 100px;
 }
 
 .about-heading {
     font-size: 3rem;
     padding: 10px;
-    margin: 16px 0;
+    margin-bottom: 16px;
     color: var(--primary-color);
 }
 
@@ -58,7 +62,7 @@
     font-size: 1.2rem;
     font-weight: 300;
     line-height: 2rem;
-    padding: 10px;
+    padding-left: 10px;
     margin-bottom: 20px;
 }
 
