#5: Fix something in Projects section

--- a/src/Components/ProjectCard/ProjectCard.css
+++ b/src/Components/ProjectCard/ProjectCard.css
@@ -14,6 +14,7 @@
     width: 30%;
     border-radius: 10px;
     overflow: hidden;
+    border: 1px solid rgba(81, 146, 89, 0.3);
     /* height: 30%; */
 }
 
@@ -31,13 +32,13 @@
 }
 
 .project-title {
-    font-size: 28px;
+    font-size: 24px;
     margin-bottom: 20px;
 }
 
 .project-desc {
-    font-size: 18px;
-    line-height: 1.8rem;
+    font-size: 16px;
+    line-height: 1.6rem;
     color: var(--text-color);
     font-weight: 300;
     text-align: justify;
@@ -74,4 +75,13 @@
 .btn-outlined {
     color: var(--secondary-color) !important;
     border: 1.5px solid var(--secondary-color) !important;
+}
+
+.project-date {
+    display: flex;
+    flex-direction: column;
+    padding-top: 2px;
+    padding-left: 50px;
+    font-size: 16px;
+    font-weight: 400;
 }
