--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
     --primary-color: #519259;
     --secondary-color: #116530;
     --text-color: #333;
+    --black-color: #000;
     --background-color: #fff;
 }
 
